package ar.edu.utn.frba.dds.entidades;

public enum TipoDeServicio {
  ESCALERAS_MECANICAS,
  ASCENSORES,
  BANIOS
}
